# review-agent

./: .gitignore  README.md  pyproject.toml  sequence.puml
.github/workflows/: ci.yml
src/review_agent/: db.py  main.py  pr_sources.py  prompts.py  tools.py
src/review_agent/providers/: __init__.py  base.py
src/review_agent/providers/anthropic/: provider.py
src/review_agent/providers/antigravity/: provider.py
src/review_agent/providers/openai/: provider.py
tests/: test_db.py  test_pr_sources.py
