[project]
name = "review-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-antigravity",
    "pydantic>=2.13.4",
    "pygithub>=2.9.1",
    "sqlmodel>=0.0.38",
    "typer>=0.26.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/review_agent"]

[tool.uv.sources]
google-antigravity = { git = "https://github.com/google-antigravity/antigravity-sdk-python" }

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "ruff>=0.15.15",
]

[tool.mypy]
ignore_missing_imports = true

[project.scripts]
review-agent = "review_agent.main:app"
